Fixing issue with margin being applied to animation NavigationTile on mobile.

--- a/src/scss/page-types/animations-holder.scss
+++ b/src/scss/page-types/animations-holder.scss
@@ -10,12 +10,15 @@
         max-width: 492px;
         margin: 0;
         
-        &--column-2 {
-            margin-top: 60px;
-        } 
-        
-        &--column-3 {
-            margin-top: 120px;
-        } 
+
+        @include media(min-lg) {
+            &--column-2 {
+                margin-top: 60px;
+            } 
+            
+            &--column-3 {
+                margin-top: 120px;
+            } 
+        }
     }
 }
